# ros2_robot_learning

./: .gitignore  .gitmodules  README.md  client_machine_setup.sh  docker_swarm_setup.sh  install_libfranka.sh  nuc_setup.sh  pyproject.toml  ros_workspace_setup.sh
.docker/camera_calibration_app/: Dockerfile  deploy_calibration_app.yaml
.docker/cameras/: Dockerfile.zed  docker-compose-zed-2i-1.yaml  docker-compose-zed-2i-2.yaml  docker-compose-zed-mini.yaml  docker-compose-zed.yaml  entrypoint.sh  ros_entrypoint.sh
.docker/control/: Dockerfile.control  docker-compose-control-server-real-dev.yaml  docker-compose-control-server-real.yaml  docker-compose-control-server.yaml  docker-compose-servo.yaml
.docker/foxglove/: Dockerfile.foxglove_bridge
.docker/motion_planning/: Dockerfile.motion_planning  docker-compose-motion-planning-dev.yaml  docker-compose-motion-planning.yaml
.docker/object_detection/: Dockerfile  deploy_object_detection.yaml
.docker/policy_deployment/: Dockerfile.policy_deployment  docker-compose-policy-deployment-dev.yaml
.docker/transporter_data_collection_app/: Dockerfile  deploy_transporter_data_collection_app.yaml  ros_entrypoint.sh
.docker/transporter_deployment/: Dockerfile  deploy_transporter.yaml
.github/: object_detection.yaml
.github/workflows/: calibration_app.yaml  control.yaml  foxglove_bridge.yaml  motion_planning.yaml  object_detection.yaml  pages.yaml  policy_deployment.yaml  transporter_data_collection_app.yaml  zed.yaml  (+1 more)
docs/: index.md
install/: local_setup.sh  setup.sh
scripts/: ros_workspace_setup.sh
(+271 files in other folders)
